power: Clamp the battery/mains timeouts

As the value can be < 0, make sure that we don't set up timeouts for
negative amounts of time.

https://bugzilla.gnome.org/show_bug.cgi?id=771543