plugins/power/gsd-power-manager.c
@@ -1716,6 +1716,7 @@ idle_configure (GsdPowerManager *manager)
         if (!is_action_inhibited (manager, action_type)) {
                 timeout_sleep = g_settings_get_int (manager->priv->settings, on_battery ?
                                                     "sleep-inactive-battery-timeout" : "sleep-inactive-ac-timeout");
+                timeout_sleep = CLAMP(timeout_sleep, 0, G_MAXINT);
         }
 
         clear_idle_watch (manager->priv->idle_monitor,
